fix: light theme contrast

--- a/src/components/options/Options.module.scss
+++ b/src/components/options/Options.module.scss
@@ -3,7 +3,6 @@
   height: 380px;
   display: flex;
   flex-direction: column;
-  background-color: var(--colors-monotone--l15);
 }
 
 .tabs {
